unpackaged/main/default/objects/Agency_Partner__c/Agency_Partner__c.object-meta.xml
<CustomObject>
    <description>Junction to show many-to-many relationship between Agency and Blue Cross Partner</description>
    <label>Agency/Partner</label>
    <nameField>
        <displayFormat>AP-{000}</displayFormat>
        <label>Agency/Partner Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agencies/Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>