unpackaged/main/default/objects/Agency_Partner__c/fields/Agency_City__c.field-meta.xml
<CustomField>
    <fullName>Agency_City__c</fullName>
    <formula>Master_Agency_ID__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency City</label>
    <type>Text</type>
</CustomField>