unpackaged/main/default/objects/Agency_Partner__c/fields/Agency_State__c.field-meta.xml
<CustomField>
    <fullName>Agency_State__c</fullName>
    <formula>Master_Agency_ID__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency State</label>
    <type>Text</type>
</CustomField>