unpackaged/main/default/objects/Agency_Partner__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <formula>TEXT(Master_Agency_ID__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Type</label>
    <type>Text</type>
</CustomField>