unpackaged/main/default/objects/Agency_Partner__c/fields/Blue_Broker_Points__c.field-meta.xml
<CustomField>
    <fullName>Blue_Broker_Points__c</fullName>
    <formula>Master_Agency_ID__r.Blue_Broker_Points__c</formula>
    <label>Blue Broker Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>