unpackaged/main/default/objects/Agency_Partner__c/fields/Blue_Broker_Status__c.field-meta.xml
<CustomField>
    <fullName>Blue_Broker_Status__c</fullName>
    <formula>text(Master_Agency_ID__r.Blue_Broker_Status__c)</formula>
    <label>Blue Broker Status</label>
    <type>Text</type>
</CustomField>