unpackaged/main/default/objects/Agency_Partner__c/fields/Master_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Agency_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Master Agency ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blue Partner</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>