unpackaged/main/default/objects/Agency_Partner__c/fields/Master_Partner_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Partner_Agency_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Master Partner Agency ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>