unpackaged/main/default/objects/Agency_Partner__c/fields/Master_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Partner_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Master Partner ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Agencies</relationshipLabel>
    <relationshipName>Blue_Partner</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>