unpackaged/main/default/objects/Agency_Partner__c/fields/Partner_City__c.field-meta.xml
<CustomField>
    <fullName>Partner_City__c</fullName>
    <formula>Master_Partner_ID__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner City</label>
    <type>Text</type>
</CustomField>