unpackaged/main/default/objects/Agency_Partner__c/fields/Partner_State__c.field-meta.xml
<CustomField>
    <fullName>Partner_State__c</fullName>
    <formula>Master_Partner_ID__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner State</label>
    <type>Text</type>
</CustomField>