unpackaged/main/default/objects/Agency_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Partner_ID__c</columns>
    <columns>Master_Agency_ID__c</columns>
    <columns>Agency_Type__c</columns>
    <columns>Agency_City__c</columns>
    <columns>Agency_State__c</columns>
    <columns>Blue_Broker_Points__c</columns>
    <columns>Blue_Broker_Status__c</columns>
    <columns>Master_Partner_Agency_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>